--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,7 @@ logs/
 # =========================
 # Qdrant storage
 # =========================
-.data/
+/data/
 
 # =========================
 # Models (большие веса)
